--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,11 +4,13 @@
   margin: 0;
   padding: 0; color: white;
 }
-.nav a {   
-      color: #faf2f2;
-      text-decoration-line: none;
-      font-size: 30px;
-  }
+
+a {   
+  color: #faf2f2;
+  text-decoration-line: none;
+  font-size: 30px;
+}
+
 .nav  {
   background-color: #d93737;
   display: flex;
@@ -16,4 +18,4 @@
   padding: 35px;
   gap: 30px;
   width: 96%;
-  }
+}
