--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -19,3 +19,33 @@ a {
   gap: 30px;
   width: auto;
 }
+
+.Welcome-section {
+  background-color: #0e0d0d;
+  color: #fffbfb;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  padding: auto;
+}
+
+.p1 {
+  font-size: 3rem;
+  font-weight: 200;
+  font-style: italic;
+  color: #b42222;
+  text-align: center;
+}
+
+ h2{
+  font: bold;
+  color: #f7faff;
+  font-weight:30px;
+  font-size: 3.2em;
+  text-align: center;
+ }
+
