--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -20,7 +20,7 @@ a {
   width: auto;
 }
 
-.Welcome-section {
+.welcome-section {
   background-color: #0e0d0d;
   color: #fffbfb;
   font-size: 20px;
@@ -44,11 +44,9 @@ a {
 h2 {
   font: bold;
   color: #f7faff;
-  font-weight:30px;
+  font-weight: 30px;
   font-size: 3.2em;
   text-align: center;
 }
-
-
 
 
