--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -53,7 +53,7 @@ section {
   background-color: #2f3f5b;
   color: #fafafa;
   height: 120vh;
-  width: 100%;
+  width: auto;
   flex-direction: column;
   display: flex;
   text-align: center;
