--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -107,7 +107,7 @@ section {
 
 h3 {
   font-size: 70px;
-  margin: 20px 20px;
+  margin: 40px;
 }
 
 .coffee {
@@ -127,10 +127,6 @@ figcaption {
 }
 
 .contact-links {
-  display: flex;
-}
-
-.contact-links {
   gap: 1rem;
   margin: 2px;
   justify-content: center;
@@ -138,6 +134,7 @@ figcaption {
   text-decoration: none;
   font-size: 22px;
   color: #fff;
+  display: flex;
 }
 
 .footer {
