--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -35,7 +35,7 @@ a {
 
 .p1 {
   font-size: 3rem;
-  font-weight: 200;
+  font-weight: 90;
   font-style: italic;
   color: #b42222;
   text-align: center;
@@ -64,7 +64,7 @@ section {
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
-  gap: 3rem;
+  gap: 2rem;
 }
 
 .project:hover {
@@ -83,13 +83,13 @@ section {
 .btn {
   margin: auto;
   display: flex;
-  height: 35px;
-  width: 5%;
+  height: 6vh;
+  width: 25%;
   text-align: center;
   background-color: #2b2d2f;
   color: #f4efef;
   font-size: large;
-  border-radius: 3px;
+  justify-content: center;
 }
 
 .contact {
@@ -120,7 +120,7 @@ figcaption {
   color: white;
   font-size: large;
   height: 6vh;
-  gap: 3rem;
+  gap: 2rem;
   text-transform: uppercase;
   font-style: italic;
   margin: auto;
@@ -140,7 +140,7 @@ figcaption {
 .footer {
   background-color: #1a1e22;
   width: auto;
-  height: 17vh;
+  height: 12vh;
   flex-direction: column;
   display: flex;
   margin: auto;
@@ -156,7 +156,7 @@ figcaption {
 .footer-paragraph {
   display: block;
   font-size: 25px;
-  color: #851515;
+  color: #f4ecec;
   font-style: italic;
   margin: auto;
   justify-content: center;
