--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,10 +3,9 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.8rem; 
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
   font-weight: 100;
-  color: rgb(255, 255, 254/30%);
 }
 
 a {
@@ -80,8 +79,9 @@ header {
   font-size: 1.6em;
   text-align: center;
 }
-.project-section{
-  background-color: rgb(54, 54, 66);
+
+.project-section {
+  background-color: #363642;
   height: 80rem;
   width: auto;
   display: flex;
@@ -103,11 +103,10 @@ header {
   justify-content: space-between;
   padding: 0.5rem;
   margin: 0 auto;
-  
 }
 
-img:hover {
-  border: 1px solid rgb(119, 119, 119);
+img :hover {
+  border: 1px solid #777777;
   background-color: #272a30;
   color: #aeaee7;
 }
@@ -116,7 +115,7 @@ img {
   padding-top: 2.5rem;
   width: 35rem;
   height: 20rem;
-  transition-duration: 0.6s; 
+  transition-duration: 0.6s;
 }
 
 .contact {
@@ -141,11 +140,10 @@ img {
   display: inline-block;
   cursor: pointer;
   font-size: 16px;
-  margin: 4px 2px;
-  
+  margin: 4px 2px; 
 }
 
-button{
+button {
   background-color: #272a30;
   color: white;
   width: auto;
@@ -195,7 +193,6 @@ figcaption {
 .contact-links a:hover {
   background-color: #fff8f8;
   color: #a29999;
-
 }
 
 footer {
